[fix] content moving when scrollbar is removed on overflow-x: hidden.

--- a/client/src/assets/styles/utils/mixins/disable-scroll.scss
+++ b/client/src/assets/styles/utils/mixins/disable-scroll.scss
@@ -1,3 +1,9 @@
+@import './responsive';
+
 @mixin disable-scroll {
   overflow-y: hidden;
+
+  @include at-medium {
+    padding-right: 17px;
+  }
 }
