--- a/client/src/assets/styles/utils/mixins/nav.scss
+++ b/client/src/assets/styles/utils/mixins/nav.scss
@@ -16,7 +16,7 @@
   box-shadow: 0 3px 6px 3px rgba($color: #000000, $alpha: 0.1);
 
   @include at-small {
-    padding: 0 8%;
+    padding: 0 100px;
   }
 
   &::after {
